--- a/Algoverse-app/src/app/shared/card/card.component.scss
+++ b/Algoverse-app/src/app/shared/card/card.component.scss
@@ -72,7 +72,7 @@
 }
 
 .creator-image {
-  width: 80px;
-  height: 80px;
+  width: 30px;
+  height: 30px;
   margin-right: 8px;
 }
